Fixed typo in Week 4 notebook

--- a/weekly_labs/Week_04_Loops/week_04_loops.ipynb
+++ b/weekly_labs/Week_04_Loops/week_04_loops.ipynb
@@ -318,7 +318,7 @@
    "source": [
     "### Bisection search - finding square roots with `while`\n",
     "\n",
-    "Bisection search is a simple way of finding roots of a function~$f(x)=0$ by narrowing down on where the function crosses zero from either side.  To keep the code simple, we'll try and solve $x^2-z=0$ for $x$ given~$z$, which means finding the square root of $z$.  The algorithm is:\n",
+    "Bisection search is a simple way of finding roots of a function $f(x)=0$ by narrowing down on where the function crosses zero from either side.  To keep the code simple, we'll try and solve $x^2-z=0$ for $x$ given $z$, which means finding the square root of $z$.  The algorithm is:\n",
     "\n",
     "1. Choose an interval $[L,U]$ such that $L<U$ and $L^2<z<U^2$.  Then the square root $\\sqrt{z}$ is between $L$ and $U$.\n",
     "2. Evaluate new point in the middle of the interval $M=\\frac{1}{2}(L+U)$ and calculate $M^2$.\n",
