new figures added to img

--- a/weekly_labs/Week_08_Reading_Data/Week_08.3-Modules_for_reading_files.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/Week_08.3-Modules_for_reading_files.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "We can transform this string to numerical data with several operations:\n",
     "1. Convert file object to list\n",
-    "2. Access line of file conaining numerical values\n",
+    "2. Access line of file conyaining numerical values\n",
     "3. Convert string to list of values with commas removed\n",
     "4. Remove the new line character from any strings in the list\n",
     "5. Cast all strings as integer values"
