data files added to week 8

--- a/weekly_labs/Week_08_Reading_Data/Week_08-Lecture.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/Week_08-Lecture.ipynb
@@ -43,6 +43,20 @@
     }
    },
    "source": [
+    "# Modularity\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/modularity_overview.png?raw=true\" width=\"80%\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Recap of the videos\n",
     "\n",
     "- We can open a file containing data using the `open` function and the file path \n",
@@ -67,22 +81,13 @@
     }
    },
    "source": [
-    "# Question \n",
+    "# Aim \n",
     "\n",
-    "Consider the file system below\n",
-    "\n",
-    "```python\n",
-    "|--- Question_1/\n",
-    "        |\n",
-    "        |--- program_1.py\n",
-    "        |--- data/ \n",
-    "               |\n",
-    "               |--- temperature.csv\n",
-    "```\n",
-    "\n",
-    "What command would you use to open the file `temperature.csv` using `program_1.py`?\n",
-    "\n",
-    "Enter your answer at [Mentimeter](https://menti.com)!"
+    "To become comfortable with:\n",
+    "- Opening files from up and downstream locations using the file path\n",
+    "- Opening text files using a computer program and reading the data contained in the file\n",
+    "- Importing a module you have seen before (`csv`) and using the functions from this module to read input data and save output data\n",
+    "- Looking at documentation for modules for other file types (e.g. JSON files) and finding eqivalent functions for reading and saving data"
    ]
   },
   {
@@ -93,13 +98,32 @@
     }
    },
    "source": [
-    "# Aim \n",
+    "There is a set of files for you to download that we will be working with/editing today. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can download these files from the command line. \n",
     "\n",
-    "To become comfortable with:\n",
-    "- Opening files from up and downstream locations using the file path\n",
-    "- Opening text files using a computer program and accessig the data contained in the file\n",
-    "- Importing a module you have seen before (`csv`) and using the functions from this module to read and save data\n",
-    "- Looking at documentation for modules for other file types (e.g. JSON files) and finding eqivalent functions for reading and saving data"
+    "Navigate to the directory where you want to download the files using `cd`. \n",
+    "\n",
+    "Download the files:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Files also available to download as zip file on Blackboard, Week 8)"
    ]
   },
   {
