--- a/weekly_labs/Week_08_Reading_Data/Week_08_1-Importing_files.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/Week_08_1-Importing_files.ipynb
@@ -18,9 +18,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/modularity_overview.png?raw=true\" width=\"20%\">\n",
+    "# Modularity\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/modularity_overview.png?raw=true\" width=\"80%\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Modularity\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/modularity_input.png?raw=true\" width=\"80%\">\n",
     "</p>"
    ]
   },
@@ -38,7 +58,8 @@
     "\n",
     "* What is a file?\n",
     "* What is a file path?\n",
-    "* How to open a file using a computer program"
+    "* How to *open* and close a file using a computer program\n",
+    "* Next video: How to *read* the contents of a file using a computer program"
    ]
   },
   {
@@ -327,7 +348,7 @@
     }
    },
    "source": [
-    "# How to open a file using a computer program"
+    "# How to open and close a file using a computer program"
    ]
   },
   {
@@ -530,6 +551,22 @@
     "file = open('../my_data/wind_speed.csv')\n",
     "file.close()\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Summary\n",
+    "\n",
+    "We have learnt:\n",
+    "- Global and local file paths \n",
+    "- Functions for opening `open()` and closing `close()` a file using a computer program\n",
+    "- Upstream and downstream file paths"
    ]
   },
   {
