Data file names changed

--- a/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
@@ -28,11 +28,14 @@
    "source": [
     "### Open the Google Colab notebook for this class\n",
     "\n",
-    "Go to Google Colab in a web browser https://colab.research.google.com/\n",
+    "Either:\n",
     "\n",
-    "Select File >> Open Notebook >> Github\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_08_Reading_Data/week_08_lab.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
     "\n",
-    "Under \"Enter a Github URL or search by organisation or user\", paste the link to this week's notebook (on blackboard)"
+    "or\n",
+    "\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_08_Reading_Data/` and open the notebook `week_08_lab.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar."
    ]
   },
   {
@@ -98,18 +101,57 @@
     }
    },
    "source": [
+    "There is a set of files for you to download that we will be working with/editing today. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "You can download these files from the command line/ terminal application. \n",
+    "\n",
+    "1. Navigate to the directory where you want to download the files using `cd`. \n",
+    "\n",
+    "2. Download the .zip file by running: `curl -O https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/Week_8.zip`\n",
+    "\n",
+    "3. Then unzip the file by running: `unzip Week_8.zip`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "(Fallback option: Files also available to download as zip file (Week_8.zip) on Blackboard, Week 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Example: Importing a downstream file\n",
     "\n",
     "Consider the file system below. \n",
     "\n",
-    "Open the file `student_marks.csv` using `program_5.py` and read the contents\n",
+    "Open the file `student_marks.csv` using `program_A.py` and read the contents\n",
     "\n",
     "```\n",
     "Week_8/\n",
     "|\n",
-    "|--- Example 5/\n",
+    "|--- Example A/\n",
     "        |\n",
-    "        |--- program_5.py\n",
+    "        |--- program_A.py\n",
     "        |--- student_marks.csv\n",
     "```"
    ]
@@ -126,17 +168,17 @@
     "\n",
     "Consider the file system below. \n",
     "\n",
-    "Open the file `student_marks.csv` using `program_6.py` and read the contents\n",
+    "Open the file `student_marks.csv` using `program_B.py` and read the contents\n",
     "\n",
     "```\n",
     "Week_8/\n",
     "|\n",
-    "|--- Example_6/\n",
+    "|--- Example_B/\n",
     "        |\n",
     "        |--- student_marks.csv\n",
     "        |--- my_program/ \n",
     "               |\n",
-    "               |--- program_6.py\n",
+    "               |--- program_B.py\n",
     "```"
    ]
   },
@@ -152,14 +194,14 @@
     "\n",
     "Consider the file system below. \n",
     "\n",
-    "Open the file `saturn.jpg` using `program_7.py` and read the contents\n",
+    "Open the file `saturn.jpg` using `program_C.py` and read the contents\n",
     "\n",
     "```\n",
     "Week_8/\n",
     "|\n",
-    "|--- Example 7/\n",
+    "|--- Example C/\n",
     "        |\n",
-    "        |--- program_7.py\n",
+    "        |--- program_C.py\n",
     "        |--- data/ \n",
     "               |\n",
     "               |--- saturn.jpg\n",
@@ -178,29 +220,22 @@
     "\n",
     "Consider the file system below. \n",
     "\n",
-    "a) Open the file `student_marks.csv` using `program_8.py` and read the contents<br>\n",
+    "a) Open the file `student_marks.csv` using `program_D.py` and read the contents<br>\n",
     "b) Find the mean of the student marks \n",
     "\n",
     "```\n",
     "Week_8/\n",
     "|\n",
-    "|--- Example_8/\n",
+    "|--- Example_D/\n",
     "        |\n",
     "        |--- my_program/ \n",
     "               |\n",
-    "               |--- program_8.py\n",
+    "               |--- program_D.py\n",
     "        |--- my_data/ \n",
     "               |\n",
     "               |--- student_marks.csv\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -267,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) Edit `program_8.py` to open the file that you created `student_grades.csv` using `programme_7.py` and read the contents"
+    "d) Edit `program_D.py` to open the file that you created `student_grades.csv` using `programme_C.py` and read the contents"
    ]
   },
   {
