--- a/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
@@ -328,7 +328,7 @@
    "source": [
     "# Exercise 1 - Importing data from upstream and downstream locations\n",
     "\n",
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_1', find and modify the program `program_10.py` to:\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_1', find and modify the program `program_1.py` to:\n",
     "1. Import the file rainfall.csv and display the contents of the file\n",
     "1. Import the file unit_description.txt and display the contents of the file\n",
     "1. Import the file cat.png and display the contents of the file"
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_2', find and modify the program `program_11.py` to:\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_2', find and modify the program `program_2.py` to:\n",
     "1. Import the file rainfall.csv and print the mean and standard deviation of the monthly rainfall values. Standard deviation $\\sigma = \\sqrt{\\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2}$, where $N$ is the total number of values, $x_i$ is each individual value in the population, $\\mu$ is the mean of all values. \n",
     "2. Import the file file xyz_data.csv and print a list containing the sum of x and z for each row in xyz_data.csv\n",
     "3. Import the file unit_description.txt and print the third line\n"
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_3', find and modify the program `program_12.py` to:\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_3', find and modify the program `program_3.py` to:\n",
     "1. Save the list, `cities`, to a csv file\n",
     "2. Save `cities` and `populations` to a csv file, where cities is the first *row* and population is the second\n",
     "2. Save `cities` and `populations` to a csv file, where cities is the first *column* and populations is the second\n",
@@ -395,7 +395,7 @@
     "### Sensor data from a robot \n",
     "\n",
     "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_4':\n",
-    "1. Create a Python file called robot_sensors.py\n",
+    "1. Create a Python file called program_4.py\n",
     "2. Import sense.csv, the data from 3 sensors mounted on the front of a robot that sense distance to the nearest object. If the first item imported begins with `\\ufeff`, include an additional argument when calling the `open` function. The additional argument is `encoding='utf-8-sig'`. \n",
     "3. The units of the distance measurements are given in cm. <br>Round the values to 1 d.p. then convert the values so they are represented in mm. <br>Save the new values as file sense_mm.csv "
    ]
@@ -802,7 +802,7 @@
    },
    "source": [
     "# Practise importing json files\n",
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_5', the file `sensor_data.json` contains data from multiple sensors installed in a manufacturing plant. <br>Each sensor records its ID, timestamp, and the temperature it measures. Modify `program_14.py` to:\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_5', the file `sensor_data.json` contains data from multiple sensors installed in a manufacturing plant. <br>Each sensor records its ID, timestamp, and the temperature it measures. Modify `program_5.py` to:\n",
     "1. Import the data from `sensor_data.json` and print the values for each sensor as 3 individual lists \n",
     "2. Calculate the average temperature for each sensor and assign each value to a variable \n",
     "3. Save these values to a new JSON file `mean_sensor_data`, so that they can be callable when imported to a program using keys: `mean_sensor_1`, `mean_sensor_2` and `mean_sensor_3`. "
