portfolio exercise and test added to week 8

--- a/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Either:\n",
     "\n",
-    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_08_Reading_Data/week_08_lab.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_08_Reading_Data/week_08_lab.ipynb) to open this notebook in Google colab.  <br>You'll need to sign in with a Google account before you can run it.  <br>When you do, hit `Ctrl+F9` to check it all runs.\n",
     "\n",
     "or\n",
     "\n",
@@ -115,7 +115,7 @@
    "source": [
     "You can download these files from the command line/ terminal application. \n",
     "\n",
-    "1. Navigate to the directory where you want to download the files using `cd`. \n",
+    "1. Navigate to the directory where you want to download the files using `cd`\n",
     "\n",
     "2. Download the .zip file by running: `curl -O https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/week_8.zip`\n",
     "\n",
@@ -359,7 +359,10 @@
    "metadata": {},
    "source": [
     "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_2', find and modify the program `program_2.py` to:\n",
-    "1. Import the file rainfall.csv. <br> <br>Print the mean and standard deviation of the monthly rainfall values. Standard deviation $\\sigma = \\sqrt{\\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2}$, where $N$ is the total number data points, $x_i$ is each data point and, $\\mu$ is the mean of all data points. "
+    "1. Import the file rainfall.csv.\n",
+    "1. Print the mean and standard deviation of the monthly rainfall values. \n",
+    "\n",
+    "Standard deviation $\\sigma = \\sqrt{\\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2}$, where $N$ is the total number data points, $x_i$ is each data point and, $\\mu$ is the mean of all data points. "
    ]
   },
   {
@@ -387,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Portfolio Assignment: Sensor data \n",
+    "# Portfolio Assignment: Sensor data processing\n",
     "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/distance_sensor_robot\n",
     ".png?raw=true\" width=\"20%\">\n",
     "</p>\n",
@@ -395,18 +398,18 @@
     "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_4', the file `sensor_data.csv` contains data from 3 sensors \n",
     "mounted on the front of a mobile robot that sense distance to the nearest object in mm, recorded every 100 milli-second. \n",
     "\n",
-    "1. Create a new python file in the same directory as `sensor_data.csv`called `program_4.py`.\n",
+    "1. Create a new python file in the same directory as `sensor_data.csv`called `sensor_data_processing.py`.\n",
     "\n",
-    "The sensor data is returned in mm and is accurate to approximately 1 cm. \n",
+    "The sensor data is shown in mm and is accurate to approximately 1 cm. \n",
     "\n",
-    "2. Import the data, convert the values so they are represented in m to make them more readable, and round the values to the nearest 1 cm. Print the final value of each sensor as a list of 3 items. \n",
+    "2. Import the data to `sensor_data_processing.py`, convert the values so they are represented in m to make them more readable, and round the values to the nearest 1 cm. Print the final value of each sensor as a list of 3 items. \n",
     "\n",
-    "Sensor data is susceptible to noise. Sensor data is often filtered to smooth the data, giving a more reliable representation of the parameter being sensed. <br>A simple filtering method is the moving average filter. <br>This computes a filtered value, $y$, which is the average value of a set of data points $x$ within a predetermined window of size $N$.\n",
+    "Sensor data is susceptible to noise and is often filtered to smooth the data, giving a more reliable representation of the parameter being sensed. <br>A simple filtering method is the moving average filter. <br>This computes a filtered value, $y_n$, which is the average value of $N$ data points $(x_n + x_{n-1} + ... + x_{n-(N-1)})$  \n",
     "\n",
     "\n",
     "$$y_n = \\frac{1}{N} \\sum_{i=0}^{N-1}x_{n-i}$$\n",
     "\n",
-    "For example, if window size $N=5$:\n",
+    "For example, if the number of points to average $N=5$:\n",
     "\n",
     "$y_5 = \\frac{x_5 + x_4 + x_3 + x_2 + x_1}{5}$\n",
     "\n",
@@ -417,10 +420,44 @@
     "Assuming $x_1$ is the first data point in our series, we cannot calculate $y_4, y_3, y_2, y_1$ as there aren't enough data points. The filtered data series is therefore shorter than the original data series by $N-1$ values. \n",
     "\n",
     "\n",
-    "3. Apply a moving average filter, with window size of $N=10$, to the first sensor data column. \n",
+    "3. Apply a moving average filter, with window size of $N=10$, to the first sensor data column (Sensor 1). \n",
     "\n",
-    "4. Save the filtered sensor data, rounded to the nearest cm, to a new file `filtered_sensor_data.csv`. "
+    "4. Save the filtered sensor data, to a new file `filtered_sensor_data.csv`. Make sure the data is displayed the nearest cm in the new file. <br>You can ensure that a value is represented in `string` format, to a specified number of decimal places using `format` (e.g. to show `value` rounded to 2 dp use  `format(value, \".2f\")`)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test and submit\n",
+    "\n",
+    "Before submitting, download `test_sensor_data_processing.py`\n",
+    "\n",
+    "To download locally to the computer you are working on, in the terminal, run:\n",
+    "`curl -O https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/test_sensor_data_processing.py`\n",
+    "\n",
+    "\n",
+    "\n",
+    "To download to Colab:\n",
+    "`!wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/test_sensor_data_processing.py`\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
