--- a/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb
@@ -117,9 +117,9 @@
     "\n",
     "1. Navigate to the directory where you want to download the files using `cd`\n",
     "\n",
-    "2. Download the .zip file by running: `curl -O https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/week_8.zip`\n",
+    "2. Download the .zip file by running: `curl -O https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/week_08.zip`\n",
     "\n",
-    "3. Then unzip the file by running: `unzip week_8.zip`"
+    "3. Then unzip the file by running: `unzip week_08.zip`"
    ]
   },
   {
@@ -152,7 +152,7 @@
     "You can alternatively open the files and work on them in Google Colab. \n",
     "\n",
     "1. Select File >> New notebook in Drive\n",
-    "1. In a new code cell run: <br>`!wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/week_8.zip` <br>`!unzip week_08.zip`\n",
+    "1. In a new code cell run: <br>`!wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/week_08.zip` <br>`!unzip week_08.zip`\n",
     "1. You can view the files in the Files tab in the side bar\n",
     "1. To run a Python file, run `!python <filename>\n",
     "1. To change directory, run `%cd <file_path>` (prefixing with `%` instead of `!` means that it will be effective across all code cells run)"
@@ -186,7 +186,7 @@
     "Open the file `student_marks.csv` using `program_A.py` and read the contents\n",
     "\n",
     "```\n",
-    "Week_8/\n",
+    "Week_08/\n",
     "|\n",
     "|--- Example A/\n",
     "        |\n",
@@ -211,7 +211,7 @@
     "Open the file `student_marks.csv` using `program_B.py` and read the contents\n",
     "\n",
     "```\n",
-    "Week_8/\n",
+    "Week_08/\n",
     "|\n",
     "|--- Example_B/\n",
     "        |\n",
@@ -238,7 +238,7 @@
     "b) Find the mean of the student marks \n",
     "\n",
     "```\n",
-    "Week_8/\n",
+    "Week_08/\n",
     "|\n",
     "|--- Example_C/\n",
     "        |\n",
@@ -337,7 +337,7 @@
    "source": [
     "# Exercise 1 - Importing data from upstream and downstream locations\n",
     "\n",
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_1', find and modify the program `program_1.py` to:\n",
+    "In the directory, 'Week_08', sub-subdirectory 'Lab_Exercise_1', find and modify the program `program_1.py` to:\n",
     "1. Import the file rainfall.csv and display the contents of the file\n",
     "1. Import the file unit_description.txt and print the third line\n",
     "1. Import the file file xyz_data.csv and print a list containing the sum of x and z for each row in xyz_data.csv"
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_2', find and modify the program `program_2.py` to:\n",
+    "In the directory, 'Week_08', sub-subdirectory 'Lab_Exercise_2', find and modify the program `program_2.py` to:\n",
     "1. Import the file rainfall.csv.\n",
     "1. Print the mean and standard deviation of the monthly rainfall values. \n",
     "\n",
@@ -380,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_3', find and modify the program `program_3.py` to:\n",
+    "In the directory, 'Week_08', sub-subdirectory 'Lab_Exercise_3', find and modify the program `program_3.py` to:\n",
     "1. Save the list, `cities`, to a csv file `data_1.csv`\n",
     "2. Save `cities` and `populations` to a csv file, `data_2.csv`, where cities is the first *row* and population is the second\n",
     "2. Save `cities` and `populations` to a csv file, `data_3.csv`, where cities is the first *column* and populations is the second"
@@ -398,7 +398,9 @@
     "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_4', the file `sensor_data.csv` contains data from 3 sensors \n",
     "mounted on the front of a mobile robot that sense distance to the nearest object in mm, recorded every 100 milli-second. \n",
     "\n",
-    "1. Create a new python file in the same directory as `sensor_data.csv`called `sensor_data_processing.py`.\n",
+    "1. Create a new python file in the same directory as `sensor_data.csv`called `sensor_data_processing.py`:\n",
+    "- `touch sensor_data_processing.py` in terminal\n",
+    "- `!touch sensor_data_processing.py` in Colab\n",
     "\n",
     "The sensor data is shown in mm and is accurate to approximately 1 cm. \n",
     "\n",
@@ -898,7 +900,7 @@
    },
    "source": [
     "# Practise importing and writing to JSON files\n",
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_5', the file `sensor_data.json` contains data from multiple sensors installed in a manufacturing plant. <br>Each sensor records its ID, timestamp, and the temperature it measures. Modify `program_5.py` to:\n",
+    "In the directory, 'Week_08', sub-subdirectory 'Lab_Exercise_5', the file `sensor_data.json` contains data from multiple sensors installed in a manufacturing plant. <br>Each sensor records its ID, timestamp, and the temperature it measures. Modify `program_5.py` to:\n",
     "1. Import the data from `sensor_data.json` and print the values for each sensor as 3 individual lists \n",
     "2. Calculate the average temperature for each sensor and assign each value to a variable \n",
     "3. Save these values to a new JSON file `mean_sensor_data.json` using keys: `'mean_sensor_1'`, `'mean_sensor_2'` and `'mean_sensor_3'`. "
