Finalized C example in Week 5 seminar

--- a/weekly_seminars/Seminar_03_Debugging_etc.ipynb
+++ b/weekly_seminars/Seminar_03_Debugging_etc.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# step 1 - drive until on line\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m60\u001b[39m):\n\u001b[1;32m----> 9\u001b[0m     drive(\u001b[38;5;241m1.1\u001b[39m\u001b[38;5;241m*\u001b[39mSLOW_DRIVE,\u001b[43mSLOW_DIRVE\u001b[49m)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m sensor_left():\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[2], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# step 1 - drive until on line\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m60\u001b[39m):\n\u001b[1;32m----> 9\u001b[0m     drive(\u001b[38;5;241m1.1\u001b[39m\u001b[38;5;241m*\u001b[39mSLOW_DRIVE,\u001b[43mSLOW_DIRVE\u001b[49m)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m sensor_left():\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'SLOW_DIRVE' is not defined"
      ]
     }
@@ -161,9 +161,10 @@
     "    E=M;\n",
     "    int ii;\n",
     "    for (ii=0; ii<100; ii++) {\n",
-    "        printf(\"Iteration %d value of E is %lf\",ii,E);\n",
+    "        printf(\"Iteration %d value of E is %lf\\n\",ii,E);\n",
     "        newE = M + e*sin(E);\n",
-    "        if (abs(newE-E)<1e-9) {\n",
+    "        if (fabs(newE-E)<1e-9) {\n",
+    "            printf(\"Converged\\n\");\n",
     "            break;\n",
     "        }\n",
     "        else {\n",
@@ -172,7 +173,22 @@
     "    }\n",
     "    return(0);\n",
     "}\n",
-    "```"
+    "```\n",
+    "\n",
+    "You can compile and run this code on Colab using the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/refs/heads/main/weekly_seminars/example.c\n",
+    "    !gcc -o example example.c -lm\n",
+    "    !./example"
    ]
   }
  ],
