Added portfiolio starting code and test script to week 6

--- a/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
+++ b/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
@@ -17,6 +17,17 @@
     "\n",
     "Today, we will look at new data types for working with sequences of data.\n",
     "\n",
+    "## Getting started\n",
+    "\n",
+    "Either:\n",
+    "\n",
+    "- Click [this link](https://github.com/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_06_Data_Structures/Lists%2C%20tuples%2C%20dicts.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "\n",
+    "or\n",
+    "\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_06_Data_Structures` and open the notebook `Lists, tuples, dicts.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
+    "\n",
     "## Sequences of Data\n",
     "\n",
     "Previously, we've introduced basic data types such as *int*, *boolean* and *string*. These can be used to store a single piece of information. e.g. We might store some data about a robot by writing\n",
@@ -1107,7 +1118,11 @@
     "\n",
     "Now, I'd like to turn these set of marks into a set of overall grades for each student. To do that, I'd like to you to write some code to create a new list containing the total marks achieved by each student. i.e for Martin, this would be a total = 6+1+4 = 11. \n",
     "\n",
-    "Next, I'd like you to write some code to calculate the mean and standard deviation of the total marks achieved. \n",
+    "Next, I'd like you to write some code to calculate the mean and standard deviation of the total marks achieved. Recall that the standard deviation of some data is given by:\n",
+    "\n",
+    "$\\sigma = \\sqrt {\\sum^i_N \\frac{(x_i-\\mu)^2}{N}}$, where $\\mu$ is the mean.\n",
+    "\n",
+    "In Python, you can calculate a square root using the function ```math.sqrt()```.\n",
     "\n",
     "Next, you should write some code to normalise the marks by subtracting the mean score from each mark. i.e here the mean mark is 14, so Martin's normalised mark should become 11-14=-3. \n",
     "\n",
@@ -1123,10 +1138,6 @@
     "Write some code to turn the normalised mark into a grade for each student, storing the results in a *dictionary* with the student name as the key and grade as the value.\n",
     "\n",
     "Write your code in the file assign_grades.py and test by running test_assign_grades.py\n",
-    "\n",
-    "### Bonus Exercise - Traffic following model\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -1135,6 +1146,8 @@
    "id": "1ade5fd5-9684-4cf3-b4f5-0a5f513948a5",
    "metadata": {},
    "source": [
+    "### Bonus Exercise - Traffic following model\n",
+    "\n",
     "One way that lists are commonly used in Python is to represent a grid of possible locations (i.e. the squares of a chess board). To represent a 2D grid, we'd normally use a nested list. However, a single list can still be used to represent a 1D grid.\n",
     "\n",
     "Representations like this can be helpful for modelling the flow of traffic along a road. If we want to model a road that has space for 30 cars, we could create a list of length 100, and use the value \"1\" to represent spaces that have cars in them and the value \"0\" to represent empty spaces. \n",
@@ -1267,7 +1280,7 @@
     "\n",
     "Next, we would like to measure the *flow rate* of our road. Here, this is relatively simple to define- it's the number of cars that moved forward. Modify the update code to calculate the flow rate at each step. \n",
     "\n",
-    "Now that you have a simple model of traffic flow, you can explore what happens as you vary the starting density of cars? Can you write some code to find the density that gives (on average) the greatest flow?"
+    "Now that you have a simple model of traffic flow, you can explore what happens as you vary the starting density of cars. Can you write some code to find the density that gives (on average) the greatest flow?"
    ]
   },
   {
