Added comprehension checking exercises

--- a/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
+++ b/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
@@ -28,6 +28,23 @@
     "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
     "- Navigate to the subfolder `weekly_labs/Week_06_Data_Structures` and open the notebook `Lists, tuples, dicts.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
     "\n",
+    "## Comprehension Checks\n",
+    "\n",
+    "The Powerpoint file \"comprehension checks.ppt\" has a number of short code samples for you to review. If you have understood everything in the pre-watch videos, then you should be able to tell what the output of these blocks of code are *without* running them. In pairs, discuss what you think the output is and then check your answer by running the code yourself (all samples are available in comprehension_checks.py). Note you'll need to use comments to control which parts of the code run. If you get all questions correct, then I would suggest you skip the text of the worksheet (as it covers the same material as the videos) and go straight into the exercises. If you get something wrong, please ask your TA to explain it to you, or use menti.com code: 6184 155 to ask for further explanation from myself. Or in pseudo_python code:\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "for question in comprehension_checks:\n",
+    "    your_ouput = ???\n",
+    "    actual_output = run_code()\n",
+    "    if your_output == actual_output:\n",
+    "        print(\"Well done!\")\n",
+    "    else:\n",
+    "        ask_for_help()\n",
+    "\n",
+    "    do_worksheet_exercises()\n",
+    "```\n",
+    "\n",
     "## Sequences of Data\n",
     "\n",
     "Previously, we've introduced basic data types such as *int*, *boolean* and *string*. These can be used to store a single piece of information. e.g. We might store some data about a robot by writing\n",
@@ -582,7 +599,7 @@
    "source": [
     "### Exercise 2 - lists and loops\n",
     "\n",
-    "1. The following table contains data from a recent assessment. Make some lists to store this data and then write a loop to calculate the average mark for each question. Then extend your code to also calculate the standard deviation for each question.\n",
+    "1. The following table contains data from a recent assessment. Make some lists to store this data and then write a loop to calculate the average mark for each question. \n",
     "| Student | Question 1 | Question 2 | Question 3 |\n",
     "| :-: | :-: | :-: | :-: |\n",
     "| Martin | 6 | 1 | 4 |\n",
